Created Context class

--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -1,5 +1,5 @@
 cmake_minimum_required(VERSION 3.15)
-project(FractalImages)
+project(GTD)
 
 set(CMAKE_EXPORT_COMPILE_COMMANDS ON)
 
@@ -10,15 +10,18 @@ IF( EXISTS "${CMAKE_CURRENT_BINARY_DIR}/compile_commands.json" )
   )
 ENDIF()
 
-#set(CMAKE_BUILD_TYPE DEBUG)
-set(CMAKE_BUILD_TYPE RELEASE)
+set(CMAKE_BUILD_TYPE DEBUG)
+#set(CMAKE_BUILD_TYPE RELEASE)
 
 set(CMAKE_CXX_STANDARD 17)
 
-include_directories(${CMAKE_CURRENT_SOURCE_DIR}/include)
+include_directories(
+		${CMAKE_CURRENT_SOURCE_DIR}/include
+		/usr/local/include
+)
 
 file(GLOB SOURCES "src/*.cpp")
 
-add_executable(fractalImages
+add_executable( gtd
 	${SOURCES}
 	)
