--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -1,14 +1,14 @@
 cmake_minimum_required(VERSION 3.15)
 project(GTD)
 
-set(CMAKE_EXPORT_COMPILE_COMMANDS ON)
+# set(CMAKE_EXPORT_COMPILE_COMMANDS ON)
 
-IF( EXISTS "${CMAKE_CURRENT_BINARY_DIR}/compile_commands.json" )
-  EXECUTE_PROCESS( COMMAND ${CMAKE_COMMAND} -E copy_if_different
-    ${CMAKE_CURRENT_BINARY_DIR}/compile_commands.json
-    ${CMAKE_CURRENT_SOURCE_DIR}/compile_commands.json
-  )
-ENDIF()
+# IF( EXISTS "${CMAKE_CURRENT_BINARY_DIR}/compile_commands.json" ) 
+#   EXECUTE_PROCESS( COMMAND ${CMAKE_COMMAND} -E copy_if_different
+#     ${CMAKE_CURRENT_BINARY_DIR}/compile_commands.json
+#     ${CMAKE_CURRENT_SOURCE_DIR}/compile_commands.json
+#   )
+# ENDIF()
 
 set(CMAKE_CXX_STANDARD 20)
 set(CMAKE_CXX_STANDARD_REQUIRED ON)
@@ -21,6 +21,7 @@ include_directories(
 		/usr/local/include
 		${SQLite3_INCLUDE_DIRS}
 )
+
 # NECESSARY ON MAC
 link_directories ( /usr/local/lib )
 
@@ -29,8 +30,10 @@ find_package(fmt)
 add_executable ( sqlplay
 	src/sql_play.cpp
 	src/Context.cpp
+  src/Task.cpp
 	src/Folder.cpp
-	src/Status.cpp
+  src/GtdHelper.cpp
+	src/Project.cpp
 	)
 	
 target_link_libraries ( sqlplay
