before removing enable_ifs from GtdContainer

--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -10,7 +10,7 @@ IF( EXISTS "${CMAKE_CURRENT_BINARY_DIR}/compile_commands.json" )
   )
 ENDIF()
 
-set(CMAKE_CXX_STANDARD 20)
+set(CMAKE_CXX_STANDARD 23)
 set(CMAKE_CXX_STANDARD_REQUIRED ON)
 
 # C++ Sqlite Library
@@ -35,41 +35,17 @@ ELSEIF(CMAKE_BUILD_TYPE STREQUAL "Debug")
 	ADD_COMPILE_DEFINITIONS(RUNMODE="dev")
 ENDIF()
 
-add_executable ( sqlplay
-    src/sql_play.cpp
-    src/Context.cpp
-    src/Task.cpp
-    src/Folder.cpp
-    src/GtdHelper.cpp
-    src/Project.cpp
-    )
-	
-target_link_libraries ( sqlplay
-    ${SQLite3_LIBRARIES}
-	sqlite3
-    fmt::fmt
-    SqliteCpp
-    pthread
-    dl)
-
-add_executable ( temp
-	src/GtdHelper.cpp
+add_executable(runtime
 	src/GtdBase.cpp
+	src/Completable.cpp
+	src/GtdHelper.cpp
 	src/UpdateStack.cpp
-    src/Completable.cpp
-	src/ImplHelpers.cpp
-	src/Context.cpp
+	src/Completable.cpp
 	src/Task.cpp
-	src/Project.cpp
-	src/Folder.cpp
-    src/UpdateStack.cpp
-    src/GtdBaseContainer.cpp
-    src/CompleteableContainer.cpp
-    src/ContextContainer.cpp
-    src/FolderContainer.cpp
-	temp.cpp)
+	src/main.cpp
+	)
 
-target_link_libraries ( temp
+target_link_libraries ( runtime
 	${SQLite3_LIBRARIES}
 	sqlite3
 	fmt::fmt
